overflow fix

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -163,7 +163,7 @@ img.logo {
 .dropdown {
     display: none;
     float: right;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 i {
